<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewNombre"
        android:inputType="textPersonName"
        android:textColorHint="#CCC8C8"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_telefono" />


    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewTelefono"
        android:inputType="phone"
        android:textColorHint="#CCC8C8"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_correo_electronico" />

    <EditText
        android:id="@+id/txtCorreoElectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewCorreo"
        android:inputType="textEmailAddress"
        android:textColorHint="#CCC8C8"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guarda"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        app:backgroundTint="#717171"
        app:srcCompat="@drawable/baseline_mode_edit_24" />

</LinearLayout>